<resources>
    <string name="app_name">StoryApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_login_page">Login dan jelajahi ceritanya</string>
    <string name="message_login_page">Masukkan Email dan Password yang sudah terdaftar</string>
    <string name="register">Register Now</string>
    <string name="message_register_page">Belum punya akun?</string>
    <string name="title_register_page">Daftarkan Dirimu!</string>
    <string name="message_register_fragment">Masukkan Data yang Sesuai ya</string>
    <string name="name">Nama</string>
    <string name="message_tologin_page">Sudah punya akun?</string>
    <string name="password_warning">Password tidak boleh dibawah 8 karakter</string>
    <string name="login_result">Login Berhasil</string>
    <string name="register_result">Pendaftaran Berhasil</string>
    <string name="logout">logout</string>
    <string name="story">Story</string>
    <string name="dashboard">Dashboard</string>
    <string name="upload_story">Upload Story</string>
    <string name="username">Username</string>
    <string name="deskripsi_story">Deskripsi story</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="story_description">Masukkan Ceritamu Disini</string>
    <string name="unggah">unggah</string>
    <string name="upload_new_story">Upload New Story</string>
    <string name="ayo_ceritakan_kisahmu">Ayo Ceritakan Kisahmu</string>
    <string name="upload_sekarang">Upload Sekarang!</string>
    <string name="map">Map</string>
    <string name="lihat_story_di_sekitarmu">Lihat Story Di sekitarmu</string>
    <string name="story_map">Story Map</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>